testdata/baselines/reference/submodule/conformance/jsdocTypeReferenceToImportOfClassExpression.errors.txt
MC.js(5,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
MW.js(8,10): error TS2339: Property 'compiler' does not exist on type 'MW'.
MW.js(12,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== MC.js (1 errors) ====
    const MW = require("./MW");
    
    /** @typedef {number} Cictema */
    
    module.exports = class MC {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
      watch() {
    ~~~~~~~~~~~
        return new MW(this);
    ~~~~~~~~~~~~~~~~~~~~~~~~
      }
    ~~~
    };
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
==== MW.js (2 errors) ====
    /** @typedef {import("./MC")} MC */
    
    class MW {
      /**
       * @param {MC} compiler the compiler
       */
      constructor(compiler) {
        this.compiler = compiler;
             ~~~~~~~~
!!! error TS2339: Property 'compiler' does not exist on type 'MW'.
      }
    }
    
    module.exports = MW;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    